hphp/hack/test/typecheck/const_attribute/class_const_attribute_outside_class.php.exp
File "class_const_attribute_outside_class.php", line 17, characters 23-37:
Cannot mutate a __Const property (Typing[4196])
